# LearnCMake

./: .gitignore  CMakeLists.txt  run.bat
include/: hello.h
src/: hello.cpp
